--- a/express/.env
+++ b/express/.env
@@ -1,5 +1,5 @@
-MYSQL_HOST = '127.0.0.1'
-# MYSQL_HOST = '172.19.0.2'
-MYSQL_USER = 'root'
-MYSQL_PASSWORD = '(Pheeraprt0123)'
-MYSQL_DATABASE = 'moral_it_device'
+ MYSQLDB_HOST = '127.0.0.1'
+#MYSQLDB_HOST = '172.19.0.2'
+MYSQLDB_USER = 'root'
+MYSQLDB_PASSWORD = 'Moral122022'
+MYSQLDB_DATABASE = 'moral_it_device'
