--- a/express/.env
+++ b/express/.env
@@ -4,4 +4,9 @@ MYSQLDB_PASSWORD=(Pheeraprt0123)
 MYSQLDB_DATABASE=moral_it_device
 MYSQLDB_PORT=3306
 
+# nodemailer config
+MAILER_GMAIL=moralceter.test@gmail.com
+MAILER_PASSWORD=svdzfbrzelinxvdy
+
+CLIENT_HOST=http://localhost:5173/
 PORT=5000
