--- a/express/package.json
+++ b/express/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
