--- a/express/package.json
+++ b/express/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "moment": "^2.29.4",
     "mysql2": "^3.1.2",
+    "node-fetch": "^2.6.11",
     "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
