--- a/express/package.json
+++ b/express/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "SET \"NODE_ENV=production\" && node index",
+    "start": "SET \"NODE_ENV=production\" && node index --exec babel-node --presets es2015,stage-2",
     "dev": "SET \"NODE_ENV=development\" && nodemon index"
   },
   "keywords": [],
