--- a/express/package.json
+++ b/express/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
