--- a/express/.env
+++ b/express/.env
@@ -8,8 +8,8 @@ MYSQLDB_PORT=3306
 MAILER_GMAIL=moralceter.test@gmail.com
 MAILER_PASSWORD=svdzfbrzelinxvdy
 
-CLIENT_HOST=http://localhost:5173/
-
+CLIENT_HOST=http://10.1.1.41
+# CLIENT_HOST=http://localhost:5173/
 
 # LINE_USER_ID="U04fa02171506285f61d5275e2f96a9a4"
 LINE_USER_ID="U236686f0e9f004a97deb150d736fa0c8"
